@@ -3022,6 +3022,9 @@ a = data.table(z,x=1:3)
 b = rbind(a, data.table(z=2,x=1))
 test(1080, b$z, c(1,2,3,2))
 
+# mid row logical detection
+test(1081, fread("A,B,C\n1,T,2\n"), data.table(A=1L,B=TRUE,C=2L))
+
 
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
